# gideon

./: .gitignore  CMakeLists.txt  background.h  camera.h  collision.h  main.cpp  material.h  random.h  readme.md  scene.h  stb_image.h
camera/: camera.h  frustumCamera.h  sphericalCamera.h
fx/: gltf.h
math/: aabb.h  baseMatrixExpr.h  baseMatrixView.h  linear.h  matrix.h  ray.h  rectangle.h  vector.h  vector2.h  vector3.h  vectorFloat.h
math/geometry/: aabbTree.h
pathtracer/: CMakeLists.txt  background.h  cmdLineParams.cpp  cmdLineParams.h  collision.h  main.cpp  material.h  random.h  scene.h  threadPool.h
pathtracer/camera/: camera.h  frustumCamera.h  sphericalCamera.h
pathtracer/collision/: AABBTree.h  AABBTree2.h  BLAS.h  CWBVH.cpp  CWBVH.h  TLAS.cpp  TLAS.h  shapeArray.h
pathtracer/materials/: Lambertian.h  MicrosurfaceScattering.cpp  MicrosurfaceScattering.h  debugMaterials.h  material.h  pbrMaterial.h  splitSumMaterials.h
pathtracer/math/: aabb.h  constants.h  linear.h  matrix.cpp  matrix.h  quaterrnion.h  random.h  ray.h  sphericalHarmonics.h  vector.h  vectorFloat.h
pathtracer/scene/: loadGltf.cpp  loadGltf.h  scene.cpp  scene.h
pathtracer/shapes/: meshInstance.h  shape.h  sphere.h  triangle.cpp  triangle.h  triangleMesh.h
pathtracer/textures/: environmentProbe.h  image.cpp  image.h  textureSampler.h
shapes/: meshInstance.h  meshPrimitive.h  multimesh.h  sphere.h  triangle.h  triangleMesh.h  triangleSet.h
test/: test.cpp
test/unit/: algebraTest.cpp  collisionTest.cpp  tlasTest.cpp
textures/: image.h  textureSampler.h
vs2017/: gideon.sln
vs2017/gideon/: gideon.vcxproj  gideon.vcxproj.filters
